fix: complete swagger docs
